<resources>
    <string name="app_name">Glimpse</string>
    <string name="Welcome">Welcome to</string>
    <string name="Create_page">Create diary page</string>
    <string name="My_pages">My diary pages</string>
    <string name="Settings">Settings</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="Theme_explanation">Changes the theme to a dark theme</string>
    <string name="insert_page_text">Write down your thoughts</string>
    <string name="Title">Title</string>
    <string name="Insert_pages">Insert pages</string>
    <string name="Pages">View and create diary page</string>
    <string name="sign_out">Diary options</string>
    <string name="close_diary">Close diary</string>
    <string name="Home">Home</string>
    <string name="Welcome_To">~ A glimpse of Life!</string>
    <string name="login">Login with existing account</string>
    <string name="signUp">Sign up</string>
    <string name="glimpselogo">glimpseLogo</string>
    <string name="registerUser">Register user</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_image">login_image</string>
    <string name="forgot">Forgot password? </string>
    <string name="your_email_here">Your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">BACK</string>
    <string name="reset_guide">Enter your email, press the \'Reset\' button and check your mail. If you can not find it, look in your \'Unwanted mail\' section</string>
    <string name="deletebutton">deleteButton</string>
    <string name="done">Create</string>
    <string name="help">To get started navigate to \'Create diary page\'. \nYou will find all of your diary pages under the section \'My diary pages\'. \nSwipe left to view the pages you have created</string>
    <string name="introimage">introImage</string>
    <string name="action_shop">Shop</string>
    <string name="soon">Coming soon</string>
</resources>
