<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_glimpse"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    tools:context=".Activities.RecoverPasswordActivity">

    <TextView
        android:id="@+id/resetGuideID"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/reset_guide"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_email_here"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset_password" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/back" />

</LinearLayout>